--- a/gerador-cores/style.css
+++ b/gerador-cores/style.css
@@ -1,6 +1,3 @@
-* {
-    border: black solid 1px;
-    }
 
     body {
         font-family: Arial, sans-serif;
@@ -14,6 +11,10 @@
     
     .container {
         text-align: center;
+        padding: 20px;
+        border-radius: 10px;  /* Deixa os cantos arredondados */
+        background-color: white;  /* Destaca o conteúdo */
+        box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
     }
     
     #btnGerar {
@@ -36,4 +37,10 @@
         border: 1px solid #ccc;
         display: inline-block;
         transition: background-color 1s ease;    }
-    
+        
+        #codigoCor {
+            font-size: 20px;
+            font-weight: bold;
+            margin-top: 10px;
+            color: #333;
+        }
